# roadtrip-ai

./: README.md  main.py  notes.md  pyproject.toml
backend/: .env
backend/app/: config.py  main.py
backend/app/clients/: graphhopper.py
backend/app/engines/: cost_engine.py
backend/app/models/: trip.py
backend/app/services/: geocoding.py  routing.py
backend/tests/: test_cost_engine.py
